修复dashborad相关bug，清除部分老代码，修复token与密钥在当前环境的不一致性问题
